added test to AiAssistantServiceFeatureTest. minor improvements to system prompt. minor fixes to all DTO models. minor fixes to tool descriptions. added deleteByName to Product api.